Overall style and work on site foundation

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "html5shiv": "~3.7.3",
     "picturefill": "~3.0.1",
     "lazysizes": "~2.0.1",
-	"onMediaQuery": "https://github.com/JoshBarr/on-media-query.git#^0.2.0"
+    "onMediaQuery": "https://github.com/JoshBarr/on-media-query.git#^0.2.0",
+    "slick-carousel": "^1.8.1"
   }
 }
