--- a/iCAN.Core/iCAN.Core.csproj
+++ b/iCAN.Core/iCAN.Core.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Models\VideoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Utility\ContentTypeHelper.cs" />
     <Compile Include="Utility\MailHelper.cs" />
     <Compile Include="Utility\Paging.cs" />
   </ItemGroup>
