--- a/iCAN.Web/packages.config
+++ b/iCAN.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="Dawoe.OEmbedPickerPropertyEditor" version="3.0.0" targetFramework="net452" />
   <package id="Examine" version="0.1.88" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.6" targetFramework="net452" />
