--- a/iCAN.Web/iCAN.Web.csproj
+++ b/iCAN.Web/iCAN.Web.csproj
@@ -159,6 +159,12 @@
     <Reference Include="Semver, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\semver.1.1.2\lib\net451\Semver.dll</HintPath>
     </Reference>
+    <Reference Include="Skybrud.Social, Version=0.9.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Skybrud.Social.0.9.6.0\lib\net40\Skybrud.Social.dll</HintPath>
+    </Reference>
+    <Reference Include="Skybrud.Social.Umbraco, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Skybrud.Social.Umbraco.1.0.7\lib\net45\Skybrud.Social.Umbraco.dll</HintPath>
+    </Reference>
     <Reference Include="SQLCE4Umbraco, Version=1.0.6528.26353, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.7.6\lib\net45\SQLCE4Umbraco.dll</HintPath>
     </Reference>
@@ -255,6 +261,29 @@
   <ItemGroup>
     <Content Include="App_Plugins\RJP.MultiUrlPicker\MultiUrlPicker.html" />
     <Content Include="App_Plugins\RJP.MultiUrlPicker\MultiUrlPicker.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Dialogs\FacebookOAuth.aspx" />
+    <Content Include="App_Plugins\Skybrud.Social\Dialogs\GoogleOAuth.aspx" />
+    <Content Include="App_Plugins\Skybrud.Social\Dialogs\InstagramOAuth.aspx" />
+    <Content Include="App_Plugins\Skybrud.Social\Dialogs\TwitterOAuth.aspx" />
+    <Content Include="App_Plugins\Skybrud.Social\Facebook\OAuth\Controllers.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Facebook\OAuth\Dialogs.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Facebook\OAuth\PreValueEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Facebook\OAuth\PropertyEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Facebook\OAuth\ScopesDialog.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Google\OAuth\Controllers.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Google\OAuth\Dialogs.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Google\OAuth\PreValueEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Google\OAuth\PropertyEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Google\OAuth\ScopesDialog.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Images\sprite.png" />
+    <Content Include="App_Plugins\Skybrud.Social\Instagram\OAuth\Controllers.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Instagram\OAuth\PreValueEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Instagram\OAuth\PropertyEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Styles\Social.css" />
+    <Content Include="App_Plugins\Skybrud.Social\Styles\Social.min.css" />
+    <Content Include="App_Plugins\Skybrud.Social\Twitter\OAuth\Controllers.js" />
+    <Content Include="App_Plugins\Skybrud.Social\Twitter\OAuth\PreValueEditor.html" />
+    <Content Include="App_Plugins\Skybrud.Social\Twitter\OAuth\PropertyEditor.html" />
     <Content Include="packages.config" />
     <Content Include="config\imageprocessor\security.config" />
     <Content Include="config\imageprocessor\processing.config" />
@@ -289,6 +318,9 @@
     <Content Include="config\BaseRestExtensions.config" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
+    <Content Include="App_Plugins\Skybrud.Social\Styles\_table.less" />
+    <Content Include="App_Plugins\Skybrud.Social\Styles\Social.less" />
+    <Content Include="App_Plugins\Skybrud.Social\package.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
