--- a/iCAN.Web/packages.config
+++ b/iCAN.Web/packages.config
@@ -42,6 +42,8 @@
   <package id="RJP.UmbracoMultiUrlPicker" version="2.1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="Skybrud.Social" version="0.9.6.0" targetFramework="net452" />
+  <package id="Skybrud.Social.Umbraco" version="1.0.7" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
