--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "picturefill": "~3.0.1",
     "lazysizes": "~2.0.1",
     "onMediaQuery": "https://github.com/JoshBarr/on-media-query.git#^0.2.0",
-    "slick-carousel": "1.7.1"
+    "slick-carousel": "1.7.1",
+    "magnific-popup": "^1.1.0"
   }
 }
