--- a/iCAN.Web/packages.config
+++ b/iCAN.Web/packages.config
@@ -47,6 +47,8 @@
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
+  <package id="Terratype" version="1.0.14" targetFramework="net452" />
+  <package id="Terratype.GoogleMapsV3" version="1.0.14" targetFramework="net452" />
   <package id="Umbraco.ModelsBuilder" version="3.0.7" targetFramework="net452" />
   <package id="UmbracoCms" version="7.7.6" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.7.6" targetFramework="net452" />
