--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,9 @@
     "picturefill": "~3.0.1",
     "lazysizes": "~2.0.1",
     "onMediaQuery": "https://github.com/JoshBarr/on-media-query.git#^0.2.0",
-	"slick-carousel": "1.7.1",
-	"slinky": "jquery-slinky#^3.0.0",
-    "magnific-popup": "^1.1.0"
+    "slick-carousel": "1.7.1",
+    "slinky": "jquery-slinky#^3.0.0",
+    "magnific-popup": "^1.1.0",
+    "svg4everybody": "https://github.com/jonathantneal/svg4everybody.git#^2.1.9"
   }
 }
