--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "slinky": "jquery-slinky#^3.0.0",
     "magnific-popup": "^1.1.0",
     "svg4everybody": "https://github.com/jonathantneal/svg4everybody.git#^2.1.9",
-    "jquery-selectric": "https://github.com/lcdsantos/jQuery-Selectric.git#^1.13.0"
+    "jquery-selectric": "https://github.com/lcdsantos/jQuery-Selectric.git#^1.13.0",
+    "jquery.tweet-linkify": "https://github.com/terenceponce/jquery.tweet-linkify.git"
   }
 }
