Add footer logos, fix pagination link colour and use ssl

--- a/iCAN.Core/iCAN.Core.csproj
+++ b/iCAN.Core/iCAN.Core.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Models\Link.cs" />
     <Compile Include="Models\LinkListViewModel.cs" />
     <Compile Include="Models\LinkPickerModel.cs" />
+    <Compile Include="Models\LogoViewModel.cs" />
     <Compile Include="Models\PageListingViewModel.cs" />
     <Compile Include="Models\PaginationViewModel.cs" />
     <Compile Include="Models\QuoteViewModel.cs" />
